# lesson-3-automatic-testing

./: Makefile  pyproject.toml
lesson_3_automatic_testing/: capitalize.py
tests/: test_capitalize.py
